# AR_DRONE

./: CMakeLists.txt  README.md
data/: default_calibration.xml  out_calibration.yml  out_calibration_below.yml
src/: camera_calibration.cpp  camera_calibration_below.cpp  drone_pad.cpp  drone_tracking.cpp  drone_tracking_below.cpp  test.cpp
